--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 </head>
 <body>
 	<h1>Hola soy un documento HTML5</h1>
-
-	<script src="javascript.js"></script>
+	<p id="parrafo1"></p>
+	<p id="parrafo2"></p>
+	<p id="parrafo3"></p>
+	<p id="parrafo4"></p>
+	<p id="parrafo5"></p>
+	<p id="parrafo6"></p>
+	<p id="parrafo7"></p>
+	<p id="parrafo8"></p>
+	<script src="js/script.js"></script>
 </body>
 </html>
